--- a/cafe-do-amanha-2/src/components/About.css
+++ b/cafe-do-amanha-2/src/components/About.css
@@ -1,6 +1,6 @@
 .about-section {
     padding: 50px 20px;
-    background-color: #f3e9e1; 
+    background-color: #f9f4ef;
     color: #4a2c2a;
     text-align: center;
 }
@@ -14,22 +14,18 @@
     font-family: 'Brush Script MT', cursive;
     font-size: 2.5rem;
     margin-bottom: 20px;
-    color: #8b5e3c;
+    color: #b63a00;
 }
 
 .about-section p {
     font-family: 'Georgia', serif;
     font-size: 1.2rem;
-    line-height: 1.6;
     margin-bottom: 30px;
     text-align: justify;
-    margin-left: auto; 
-    margin-right: auto; 
-    max-width: 80%; 
 }
 
 .carousel {
-    margin-top: 30px;
+    margin-top: 40px;
 }
 
 
