--- a/src/components/menu/DetalhesMenu.css
+++ b/src/components/menu/DetalhesMenu.css
@@ -52,9 +52,10 @@
 }
 
 .voltar-menu:hover {
-    background-color: #845e46;
+    border-color: #d2691e;
+    color: #d2691e;
 }
 
 .voltar-menu:active {
-    background-color: #663f27;
+    border-color: #ffffff;
 }
