--- a/src/components/Stories/Stories.css
+++ b/src/components/Stories/Stories.css
@@ -1,7 +1,7 @@
-/* src/components/Stories.css */
 .stories-section {
+    font-family: 'Merriweather', serif;
     padding: 50px 20px;
-    background-color: #f9f4ef;
+    background-color: #c3b091;
     color: #4a2c2a;
     text-align: center;
 }
@@ -12,17 +12,15 @@
 }
 
 .stories-section h1 {
-    font-family: 'Brush Script MT', cursive;
     font-size: 2.5rem;
     margin-bottom: 20px;
     color: #b63a00;
 }
 
 .stories-section p {
-    font-family: 'Georgia', serif;
     font-size: 1.2rem;
     margin-bottom: 30px;
-    text-align: justify;
+    text-align: center;
 }
 
 .story-list {
@@ -47,7 +45,6 @@
 }
 
 .story p {
-    font-family: 'Verdana', sans-serif;
     font-size: 1rem;
     line-height: 1.5;
 }
