--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,8 +1,9 @@
 .about-section {
     padding: 50px 20px;
-    background-color: #f9f4ef;
-    color: #4a2c2a;
+    background-color: #d7c7ac;
+    color: #51321c;
     text-align: center;
+    font-family: 'Merriweather', serif;
 }
 
 .container {
@@ -11,17 +12,14 @@
 }
 
 .about-section h1 {
-    font-family: 'Brush Script MT', cursive;
     font-size: 2.5rem;
     margin-bottom: 20px;
     color: #b63a00;
 }
 
 .about-section p {
-    font-family: 'Georgia', serif;
     font-size: 1.2rem;
     margin-bottom: 30px;
-    text-align: justify;
 }
 
 .carousel {
