--- a/src/components/Stories/Stories.css
+++ b/src/components/Stories/Stories.css
@@ -1,9 +1,9 @@
-/* src/components/Stories.css */
 .stories-section {
     padding: 50px 20px;
-    background-color: #f9f4ef;
-    color: #4a2c2a;
+    background-color: #d7c7ac;
+    color: #65442c;
     text-align: center;
+    font-family: 'Merriweather', serif;
 }
 
 .container {
@@ -12,17 +12,14 @@
 }
 
 .stories-section h1 {
-    font-family: 'Brush Script MT', cursive;
     font-size: 2.5rem;
     margin-bottom: 20px;
     color: #b63a00;
 }
 
 .stories-section p {
-    font-family: 'Georgia', serif;
     font-size: 1.2rem;
     margin-bottom: 30px;
-    text-align: justify;
 }
 
 .story-list {
