hotfix/atualizacao-css

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,7 +1,7 @@
 .about-section {
     padding: 50px 20px;
-    background-color: #c3b091;
-    color: #79533b;
+    background-color: #d7c7ac;
+    color: #51321c;
     text-align: center;
     font-family: 'Merriweather', serif;
 }
