--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -14,7 +14,7 @@
 .about-section h1 {
     font-size: 2.8rem;
     margin-bottom: 20px;
-    color: #51321c;
+    color: #b63a00;
 }
 
 .about-section p {
