--- a/src/components/pedidos/FinalPedido.css
+++ b/src/components/pedidos/FinalPedido.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #c3b091;
+    background-color: #9b8664;
     padding: 20px;
     box-sizing: border-box;
     color: #ffffff;
