--- a/src/components/pedidos/ProdutosPedido.css
+++ b/src/components/pedidos/ProdutosPedido.css
@@ -4,13 +4,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #c3b091;
+    background-color: #9b8664;
     padding: 20px;
     width: 100%;
     max-width: 100%;
     height: 100vh;
     margin: 0 auto;
-    border-radius: 15px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
     color: #ffffff;
 }
