--- a/src/components/pages/menu/Menu.css
+++ b/src/components/pages/menu/Menu.css
@@ -85,6 +85,10 @@ ul.menu-list li span {
     border: none;
 }
 
+.nav-tabs .nav-link.active:hover{
+    color: #d2691e;
+}
+
 .nav-tabs .nav-link:hover {
     color: #ffffff;
 }
