--- a/src/components/pages/pedidos/ProdutosPedido.css
+++ b/src/components/pages/pedidos/ProdutosPedido.css
@@ -1,4 +1,4 @@
-.pedido-container{
+.pedido-container, .empty-pedido{
     font-family: 'Merriweather', serif;
     display: flex;
     flex-direction: column;
@@ -12,6 +12,14 @@
     margin: 0 auto;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
     color: #ffffff;
+}
+
+.empty-pedido-text{
+    font-size: 24px;
+    text-align: center;
+    background-color: #845e46;
+    border-radius: 30px;
+    padding: 20px;
 }
 
 .pedido-table{
@@ -29,6 +37,18 @@
     text-align: center;
     vertical-align: middle;
     color: #ffffff;
+}
+
+.total{
+    font-size: 24px;
+    background-color: #845e46;
+    border-radius: 20px;
+    padding: 10px;
+    margin-top: 20px;
+}
+
+.total h3{
+    margin: 0;
 }
 
 .pedido-button {
